# siseon

./: .gitattributes  README.md
ai/: .gitignore  README.md  main.py  requirements.txt  torchvision-0.23.0-cp310-cp310-linux_aarch64.whl  utils.py
ai/.ipynb_checkpoints/: README-checkpoint.md  main-checkpoint.py  requirements-checkpoint.txt  utils-checkpoint.py
ai/app/webcam/: capture.py  draw.py  loader.py  main.py  postproc.py
ai/app/webcam/.ipynb_checkpoints/: capture-checkpoint.py  main-checkpoint.py  postproc-checkpoint.py
ai/camera/: camera_test.py
ai/camera/.ipynb_checkpoints/: capture-checkpoint.py  utils-checkpoint.py
ai/chatbot/: app.py  settings.py  test_app.py
ai/chatbot/.ipynb_checkpoints/: config-checkpoint.yaml  indexer-checkpoint.py  llm-checkpoint.py  requirements-checkpoint.txt  service-checkpoint.py
ai/configs/: default.yaml
ai/configs/.ipynb_checkpoints/: default-checkpoint.yaml
ai/gaze_detection/: baseline_yolo.ipynb  baseline_yolo.py
ai/gaze_detection/data/: download.py  preprocess.py
ai/gaze_detection/hpo/: optimize.py
ai/gaze_detection/inference/: file.py
ai/gaze_detection/inference/webcam/: draw.py  loader.py  postproc.py
ai/gaze_detection/inference/webcam/.ipynb_checkpoints/: capture-checkpoint.py  main-checkpoint.py  postproc-checkpoint.py  sender-checkpoint.py
ai/gaze_detection/models/: evaluate.py  train.py
ai/gaze_detection/models/.ipynb_checkpoints/: evaluate-checkpoint.py  train-checkpoint.py
ai/gaze_detection/pretrain/.ipynb_checkpoints/: roboflow-checkpoint.py
ai/gaze_detection/viz/: visualize.py
ai/gaze_detection/viz/.ipynb_checkpoints/: monitor-checkpoint.py  visualize-checkpoint.py
ai/net/: sender.py
ai/pose_estimation/data/: bulid_filic_yolo.py
ai/pose_estimation/inference/: file.py
ai/pose_estimation/models/: train.py
ai/pose_estimation/models/.ipynb_checkpoints/: eval-checkpoint.py  train-checkpoint.py
ai/scripts/run_gaze/: eval.sh  hpo.sh  inference.sh  pretrain.sh  run_all.sh  run_eval.sh  run_hpo.sh  run_inference.sh  run_train.sh  viz.sh
ai/scripts/run_gaze/.ipynb_checkpoints/: all-checkpoint.sh  run_viz-checkpoint.sh  run_webcam-checkpoint.sh  train-checkpoint.sh
ai/scripts/run_pose/: inference.sh
ai/scripts/run_pose/.ipynb_checkpoints/: train-checkpoint.sh
ai/scripts/run_webcam/: webcam.sh
ai/scripts/run_webcam/.ipynb_checkpoints/: webcam-checkpoint.sh
backend/: Jenkinsfile  README.md
backend/siseon-backend/: .gitignore  Dockerfile  build.gradle  docker-compose.yml  settings.gradle
backend/siseon-backend/src/main/resources/: application.yml
backend/siseon-chatbot/: Dockerfile  app.py  db.py  indexer.py  models.py  requirements.txt  security.py  seed.py  service.py  settings.py
frontend/: README.md
frontend/siseon2/: .gitignore  README.md  pubspec.yaml
frontend/siseon2/android/app/: build.gradle.kts  google-services.json
frontend/siseon2/ios/Runner/: Info.plist
frontend/siseon2/ios/Runner.xcodeproj/: project.pbxproj
frontend/siseon2/lib/: home_screen.dart  login_screen.dart  main.dart  profile_select_screen.dart  root_screen.dart
frontend/siseon2/lib/components/: custom_joystick.dart
frontend/siseon2/lib/models/: chat_models.dart  control_mode.dart  slot_data.dart
frontend/siseon2/lib/pages/: ble_scan_screen.dart  bls_test_page.dart  chatbot_page.dart  daily_hour_detail_page.dart  device_register_page.dart  home_screen.dart  manual_page.dart  profile_create.dart  profile_page.dart  stats_page.dart  tutorial_screen.dart
frontend/siseon2/lib/pages/settings/: device_info.dart  edit_profile.dart  preset_page.dart  (+4 more)
frontend/siseon2/lib/services/: auth_service.dart  ble_session.dart  chat_api.dart  device_cache_service.dart  faq_service.dart  fcm_service.dart  mqtt_service.dart  preset_service.dart  profile_cache_service.dart  snack_service.dart  stats_service.dart
frontend/siseon2/lib/widgets/: pretty_joystick.dart  rect_card.dart
frontend/siseon2/test/: widget_test.dart
frontend/siseon2/web/: index.html  manifest.json
frontend/siseon2/windows/: CMakeLists.txt
frontend/siseon2/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
frontend/siseon2/windows/runner/: Runner.rc  main.cpp
iot/: .gitignore  README.md
iot/ros2_ws/: ble_test.sh  profile.json  run_all.sh
iot/ros2_ws/src/arm_control_node/: CMakeLists.txt  package.xml
iot/ros2_ws/src/arm_control_node/msg/: CmdPose.msg
iot/ros2_ws/src/arm_control_node/src/: arm_control_node.cpp
iot/ros2_ws/src/control_bridge_node/: CMakeLists.txt  package.xml  start.sh
iot/ros2_ws/src/controller_manager/: CMakeLists.txt  package.xml
iot/ros2_ws/src/eye_pos_node/: CMakeLists.txt  package.xml
iot/ros2_ws/src/eye_pos_node/src/: eye_pos_node.cpp
iot/ros2_ws/src/eye_pose_node/: CMakeLists.txt  package.xml
iot/ros2_ws/src/eye_pose_node/src/: eye_pose_node.cpp
iot/ros2_ws/src/fusion_node/: CMakeLists.txt  package.xml
iot/ros2_ws/src/fusion_node/launch/: all_nodes_launch.py
iot/ros2_ws/src/fusion_node/src/: fusion_node.cpp
iot/ros2_ws/src/lidar_node/: CMakeLists.txt  package.xml  start.sh
iot/ros2_ws/src/lidar_node/launch/: person_detector_launch.py
iot/ros2_ws/src/lidar_node/src/: lidar_node.cpp  ydlidar_ros2_driver_client.cpp  ydlidar_ros2_driver_node.cpp
iot/ros2_ws/src/manual_bt_node/: CMakeLists.txt  package.xml
iot/ros2_ws/src/manual_bt_node/src/: manual_bt_node.cpp
iot/ros2_ws/src/manual_bt_node/src/dbus_interfaces/: gatt_characteristic.xml
iot/ros2_ws/src/pairing_bridge_node/: CMakeLists.txt  package.xml
iot/ros2_ws/src/pairing_bridge_node/hooks/: local_setup.sh
iot/ros2_ws/src/pairing_bridge_node/src/: pairing_bridge_node.cpp
iot/ros2_ws/src/pairing_bridge_node/src/dbus_interfaces/: gatt_service.xml  object_manager.xml
iot/ros2_ws/src/pairing_node/: CMakeLists.txt  package.xml
iot/ros2_ws/src/pairing_node/src/: pairing_node.cpp
iot/ros2_ws/src/preset_bridge_node/: CMakeLists.txt  package.xml
iot/ros2_ws/src/preset_bridge_node/src/: preset_bridge_node.cpp
iot/ros2_ws/src/preset_manager_node/: CMakeLists.txt  package.xml
(+89 files in other folders)
